--- a/entry.html
+++ b/entry.html
@@ -16,6 +16,7 @@ var systemData = null;	// current system data
 var jsonOutput = "";
 var sqlOutput = "";
 var systemsMap = {};
+var names = [];
 
 $(document).ready(function () {
 	$.getJSON('systems.json', function(data) {
@@ -27,7 +28,6 @@ $(document).ready(function () {
 		});
 
 		// set up the autocomplete
-		var names = [];
 		$.each(systems, function() {
 			names.push(this.name);
 		});
@@ -145,7 +145,9 @@ function addSystemRow() {
 	 var tr = $('<tr><td><input class="system-name"></td><td><input class="distance"></td><td/><td/></tr>')
 		.appendTo('#distances tbody');
 	tr.find('input').change(updateCoords);
-	tr.find('input.system-name').change(checkEmptyRow);
+	tr.find('input.system-name')
+		.change(checkEmptyRow)
+		.autocomplete({source: names});
 }
 
 function updateCoords() {
